--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html.twig' %}
 
-</body>
-</html>
+{% block body %}
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="mb-3 text-primary">Dernières sorties</h2>
+            </div>
+
+            {% for video in videos %}
+                <div class="col-md-6 col-lg-4">
+                    <div id="gallery" class="card my-3">
+
+                        <div class="card-image-top">
+                            {% include 'components/svgs/_video_svg.html.twig' %}
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title"><a href="#" class="text-secondary">{{ video.name|upper }}</a> - {{ video.releaseDate|date("Y") }}</h3>
+                            <p class="text-end">{{ video.author }}</p>
+                            <p class="card-text"><strong>Synopsis</strong> : {{ video.synopsis }} </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p class="badge bg-secondary">{{ video.type }}</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <button disabled class="btn btn-primary">Télécharger</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
